# VcpkgXercesTest

./: .gitmodules  CMakeLists.txt  XmlUtil.cpp  XmlUtil.h  main.cpp  stdafx.h
scripts/: build.bat  build.sh
